// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runs correctly for left 1`] = `
<div
  className="topbar-nav-back"
>
  <SvgBack
    className="topbar-nav-icon"
  />
</div>
`;

exports[`runs correctly for right 1`] = `
<div
  className="topbar-nav-forward"
>
  <SvgForward
    className="topbar-nav-icon"
  />
</div>
`;
